--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,6 @@ body{
     margin: 0rem;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     font-family: 'Poppins', sans-serif;
     color: var(--text-color);
     background-color: var(--bg-color);
@@ -491,8 +490,9 @@ dialog button:hover{
 
 @media (max-width: 600px){
 
-    *{
-        overflow: hidden;
+    body{
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
     header{
@@ -588,10 +588,6 @@ dialog button:hover{
         margin-top: 2rem;
     }
 
-    #container{
-        overflow: hidden;
-    }
-
     #container #weatherH1{
         font-size: 1.7rem;
         text-align: center;
@@ -661,5 +657,9 @@ dialog button:hover{
     nav button{
         margin: 0rem 2rem;
         font-size: 1rem;
+    }
+
+    body{
+        overflow: hidden;
     }
 }
