--- a/src/style.css
+++ b/src/style.css
@@ -491,8 +491,7 @@ dialog button:hover{
 @media (max-width: 600px){
 
     body{
-        overflow-y: scroll;
-        overflow-x: hidden;
+        overflow:scroll;
     }
 
     header{
